# noted

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  configure  configure.ac
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3t
frontend/: main.cpp
include/: chord.hpp  key.hpp  notes.hpp
libnoted/: chord.cpp  key.cpp  notes.cpp
